@@ -3,410 +3,318 @@
 
 package org.jetbrains.intellij.build.bazel
 
-import com.intellij.openapi.util.NlsSafe
-import org.jetbrains.jps.model.JpsProject
-import org.jetbrains.jps.model.java.*
-import org.jetbrains.jps.model.library.JpsRepositoryLibraryType
-import org.jetbrains.jps.model.module.*
+import com.intellij.openapi.application.PathManager
+import com.intellij.openapi.util.JDOMUtil
+import org.jdom.Element
+import org.jetbrains.jps.model.module.JpsModule
 import org.jetbrains.jps.model.serialization.JpsSerializationManager
-import org.jetbrains.jps.util.JpsPathUtil
-import org.jetbrains.kotlin.jps.model.JpsKotlinFacetModuleExtension
+import java.nio.file.Files
 import java.nio.file.Path
-import java.util.*
-import kotlin.collections.ArrayDeque
 import kotlin.io.path.invariantSeparatorsPathString
+import kotlin.io.path.name
+import kotlin.io.path.nameWithoutExtension
+import kotlin.io.path.relativeTo
 
-class JpsModuleToBazel {
+/**
+ To enable debug logging in Bazel: --sandbox_debug --verbose_failures --define=kt_trace=1
+ */
+internal class JpsModuleToBazel {
   companion object {
     @JvmStatic
     fun main(args: Array<String>) {
-      // App module - the module that we want to run. We build Bazel BUILD files for this module and all its dependencies.
       val m2Repo = Path.of(System.getProperty("user.name"), ".m2/repository")
-      val projectDir = Path.of(".").toAbsolutePath().normalize()
+      val projectDir = Path.of(PathManager.getHomePath())
       val project = JpsSerializationManager.getInstance().loadProject(projectDir.toString(), mapOf("MAVEN_REPOSITORY" to m2Repo.toString()), true)
+      val jarRepositories = loadJarRepositories(projectDir)
 
-      val nameToModule = project.model.project.modules.associateTo(HashMap()) { it.name to it }
+      val urlCache = UrlCache(cacheFile = projectDir.resolve("build/lib-lock.json"))
 
-      val generator = BazelBuildFileGenerator(projectDir, project)
+      val generator = BazelBuildFileGenerator(projectDir = projectDir, project = project, urlCache = urlCache)
+      // first, generate community to collect libs, that used by community (to separate community and ultimate libs)
+      val communityFiles = generator.generateModuleBuildFiles(isCommunity = true)
+      val ultimateFiles = generator.generateModuleBuildFiles(isCommunity = false)
+      generator.save(communityFiles)
+      generator.save(ultimateFiles)
 
-      generator.addModuleToQueue(nameToModule.getValue("intellij.platform.buildScripts"))
-      generator.addModuleToQueue(nameToModule.getValue("intellij.platform.buildScripts.bazel"))
-      generator.addModuleToQueue(nameToModule.getValue("intellij.platform.images"))
-      generator.addModuleToQueue(nameToModule.getValue("intellij.xml.impl"))
-      generator.generate()
+      deleteOldFiles(
+        projectDir = projectDir,
+        generatedFiles = (communityFiles.keys.asSequence() + ultimateFiles.keys.asSequence())
+          .filter { it != projectDir }
+          .sortedBy { projectDir.relativize(it).invariantSeparatorsPathString }
+          .toList(),
+      )
 
-      generateCommunityLibraryBuild(projectDir, generator)
-
-      val bazelFileUpdater = BazelFileUpdater(projectDir.resolve("community/build/libraries/MODULE.bazel"))
-      buildFile(bazelFileUpdater, "artifacts") {
-        target("") {
-          option(
-            "artifacts",
-            listOf("org.jetbrains.kotlin:kotlin-serialization-compiler-plugin:2.0.10")
-            + generator.libs.asSequence().map { it.mavenCoordinates }.distinct().sorted().toList()
-          )
+      val communityTargets = communityFiles.keys
+        .asSequence()
+        .map { projectDir.relativize(it).invariantSeparatorsPathString }
+        .filter { it != "community/plugins/maven/remote-run" }
+        .joinToString("\n") {
+          val dir = it.removePrefix("community/").takeIf { it != "community" } ?: ""
+          val ruleDir = "build/jvm-rules/"
+          if (dir.startsWith(ruleDir)) {
+            "@rules_jvm//${dir.removePrefix(ruleDir)}:all"
+          }
+          else {
+            "@community//$dir:all"
+          }
         }
+      val ultimateTargets = ultimateFiles.keys.joinToString("\n") {
+        "//" + projectDir.relativize(it).invariantSeparatorsPathString + ":all"
+      } + "\n@community//plugins/maven/remote-run:all"
+      Files.writeString(projectDir.resolve("build/bazel-community-targets.txt"), communityTargets)
+      Files.writeString(projectDir.resolve("build/bazel-targets.txt"), communityTargets + "\n" + ultimateTargets)
+
+      try {
+        generateProjectLibraryBazelBuild(file = projectDir.resolve("community/build/lib/BUILD.bazel"), isCommunity = true, generator = generator)
+        generateProjectLibraryBazelBuild(file = projectDir.resolve("build/lib/BUILD.bazel"), isCommunity = false, generator = generator)
+
+        generateCommunityLibraryBazelModule(projectDir = projectDir, jarRepositories = jarRepositories, m2Repo = m2Repo, generator = generator)
+        generateUltimateLibraryBazelModule(projectDir = projectDir, jarRepositories = jarRepositories, m2Repo = m2Repo, generator = generator)
+
+        generateLocalLibraries(generator.libs.asSequence().filterIsInstance<LocalLibrary>().sortedBy { it.targetName })
       }
-      bazelFileUpdater.save()
+      finally {
+        urlCache.save()
+      }
     }
   }
 }
 
-private fun generateCommunityLibraryBuild(projectDir: Path, generator: BazelBuildFileGenerator) {
-  val bazelFileUpdater = BazelFileUpdater(projectDir.resolve("community/build/libraries/BUILD.bazel"))
-  buildFile(bazelFileUpdater, "maven-libraries") {
-    for (lib in generator.libs.sortedBy { it.targetName }) {
-      if (lib.targetName == "bifurcan" || lib.targetName == "kotlinx-collections-immutable-jvm") {
-        continue
-      }
+private fun deleteOldFiles(projectDir: Path, generatedFiles: List<Path>) {
+  val fileListFile = projectDir.resolve("build/bazel-generated-file-list.txt")
+  val oldFiles = if (Files.exists(fileListFile)) Files.readAllLines(fileListFile).map { projectDir.resolve(it.trim()) } else emptySet()
 
-      target("java_library") {
-        option("name", lib.targetName)
-        option("exports", arrayOf(lib.bazelLabel))
-        if (lib.isProvided) {
-          @Suppress("SpellCheckingInspection")
-          option("neverlink", true)
+  val filesToDelete = HashSet(oldFiles)
+  filesToDelete.removeAll(generatedFiles)
+  if (filesToDelete.isNotEmpty()) {
+    println("Delete ${filesToDelete.size} old files")
+    for (file in filesToDelete) {
+      println("Delete old ${projectDir.relativize(file).invariantSeparatorsPathString}/BUILD.bazel")
+      Files.deleteIfExists(file.resolve("BUILD.bazel"))
+    }
+  }
+
+  Files.writeString(fileListFile, generatedFiles.joinToString("\n") { projectDir.relativize(it).invariantSeparatorsPathString })
+}
+
+private fun getUrlAndSha256(jar: Path, jarRepositories: List<JarRepository>, m2Repo: Path, urlCache: UrlCache): CacheEntry {
+  val jarPath = jar.relativeTo(m2Repo).invariantSeparatorsPathString
+  val entry = urlCache.getEntry(jarPath)
+  if (entry == null) {
+    println("Resolving: $jarPath")
+    for (repo in jarRepositories) {
+      val url = "${repo.url}/${jarPath}"
+      if (urlCache.checkUrl(url, repo)) {
+        return urlCache.putUrl(jarPath = jarPath, url = url, repo = repo)
+      }
+    }
+    error("Cannot find $jar in $jarRepositories (jarPath=$jarPath)")
+  }
+  return entry
+}
+
+private fun loadJarRepositories(projectDir: Path): List<JarRepository> {
+  val jarRepositoriesXml = JDOMUtil.load(projectDir.resolve(".idea/jarRepositories.xml"))
+  val component = jarRepositoriesXml.getChildren("component").single()
+  return component.getChildren("remote-repository").map { element ->
+    JarRepository(url = getOptionValue(element, "url"), isPrivate = getOptionValue(element, "id").contains("private"))
+  }
+}
+
+private fun getOptionValue(element: Element, key: String): String {
+  return element.getChildren("option").single { it.getAttributeValue("name") == key }.getAttributeValue("value")
+}
+
+private fun generateLocalLibraries(libs: Sequence<LocalLibrary>) {
+  for ((dir, libs) in libs.groupBy { it.files.first().parent }) {
+    val bazelFileUpdater = BazelFileUpdater(dir.resolve("BUILD.bazel"))
+    bazelFileUpdater.removeSections("local-libraries")
+    buildFile(bazelFileUpdater, "local-libs") {
+      load("@rules_java//java:defs.bzl", "java_import")
+      for (lib in libs) {
+        target("java_import") {
+          option("name", lib.targetName)
+          option("jars", lib.files.map { it.fileName.toString() })
+          option("visibility", arrayOf("//visibility:public"))
         }
-        visibility(arrayOf("//visibility:public"))
+      }
+    }
+    bazelFileUpdater.save()
+  }
+}
+
+private fun generateProjectLibraryBazelBuild(file: Path, isCommunity: Boolean, generator: BazelBuildFileGenerator) {
+  val bazelFileUpdater = BazelFileUpdater(file)
+  bazelFileUpdater.removeSections("local-libraries")
+  bazelFileUpdater.removeSections("maven-libraries")
+
+  val mavenLibraries = generator.libs.filterIsInstance<MavenLibrary>().filter { it.isCommunity == isCommunity }.sortedBy { it.targetName }
+  if (mavenLibraries.isNotEmpty()) {
+    generateMavenLibs(bazelFileUpdater = bazelFileUpdater, mavenLibraries = mavenLibraries)
+  }
+
+  val localLibraries = generator.libs.filterIsInstance<LocalLibrary>().filter { it.isCommunity == isCommunity }.sortedBy { it.targetName }
+  if (localLibraries.isNotEmpty()) {
+    buildFile(bazelFileUpdater, "local-libs") {
+      for (lib in localLibraries.groupBy { it.targetName }.flatMap { (_, values) -> listOf(values.maxBy { it.targetName }) }) {
+        target("java_library") {
+          option("name", lib.targetName)
+          option("exports", arrayOf(lib.bazelLabel))
+          if (lib.isProvided) {
+            @Suppress("SpellCheckingInspection")
+            option("neverlink", true)
+          }
+          visibility(arrayOf("//visibility:public"))
+        }
       }
     }
   }
   bazelFileUpdater.save()
 }
 
-private data class ModuleDescriptor(
-  @JvmField val contentRoot: Path,
-)
+private fun generateMavenLibs(
+  bazelFileUpdater: BazelFileUpdater,
+  mavenLibraries: List<MavenLibrary>,
+) {
+  val labelChecker = HashSet<String>()
+  buildFile(bazelFileUpdater, "maven-libs") {
+    for (lib in mavenLibraries.groupBy { it.targetName }.flatMap { (_, values) -> listOf(values.maxBy { it.targetName }) }) {
+      @Suppress("SpellCheckingInspection")
+      if (lib.targetName == "bifurcan" || lib.targetName == "kotlinx-collections-immutable-jvm") {
+        continue
+      }
 
-private fun describeModule(module: JpsModule): ModuleDescriptor {
-  val contentRoots = module.contentRootsList.urls.map { Path.of(JpsPathUtil.urlToPath(it)) }
-  if (contentRoots.isEmpty()) {
-    throw NoContentRoot("Skip ${module.name} because it has no content roots")
-  }
+      if (lib.jars.size == 1) {
+        val jar = lib.jars.single()
+        val libName = lib.targetName
+        if (!labelChecker.add(libName)) {
+          continue
+        }
 
-  require(contentRoots.size == 1) {
-    "Expected exactly one content root for module ${module.name}, got $contentRoots"
+        val sourcesJar = lib.sourceJars.singleOrNull { it.name == "${jar.nameWithoutExtension}-sources.jar" }
+        target("kt_jvm_import") {
+          option("name", lib.targetName)
+          option("jar", "@${escapeBazelLabel(jar.nameWithoutExtension)}_http//file")
+          if (sourcesJar != null) {
+            option("srcjar", "@${escapeBazelLabel(sourcesJar.nameWithoutExtension)}_http//file")
+          }
+          if (lib.isProvided) {
+            @Suppress("SpellCheckingInspection")
+            option("neverlink", true)
+          }
+          visibility(arrayOf("//visibility:public"))
+        }
+      }
+      else {
+        target("java_library") {
+          option("name", lib.targetName)
+          option("exports", lib.jars.map { ":${escapeBazelLabel(it.nameWithoutExtension)}_import" })
+          if (lib.isProvided) {
+            @Suppress("SpellCheckingInspection")
+            option("neverlink", true)
+          }
+          visibility(arrayOf("//visibility:public"))
+        }
+
+        for (jar in lib.jars) {
+          val label = "${escapeBazelLabel(jar.nameWithoutExtension)}_import"
+          if (!labelChecker.add(label)) {
+            continue
+          }
+
+          val sourcesJar = lib.sourceJars.singleOrNull { it.name == "${jar.nameWithoutExtension}-sources.jar" }
+          target("kt_jvm_import") {
+            option("name", label)
+            option("jar", "@${escapeBazelLabel(jar.nameWithoutExtension)}_http//file")
+            if (sourcesJar != null) {
+              option("srcjar", "@${escapeBazelLabel(sourcesJar.nameWithoutExtension)}_http//file")
+            }
+          }
+        }
+      }
+    }
   }
-  return ModuleDescriptor(
-    contentRoot = contentRoots.first(),
+}
+
+private fun generateCommunityLibraryBazelModule(projectDir: Path, jarRepositories: List<JarRepository>, m2Repo: Path, generator: BazelBuildFileGenerator) {
+  generateProjectLibraryBazelModule(
+    file = projectDir.resolve("community/build/lib/MODULE.bazel"),
+    isCommunity = true,
+    jarRepositories = jarRepositories,
+    m2Repo = m2Repo,
+    generator = generator,
   )
 }
 
-private class NoContentRoot(message: String) : RuntimeException(message)
+private fun generateUltimateLibraryBazelModule(projectDir: Path, jarRepositories: List<JarRepository>, m2Repo: Path, generator: BazelBuildFileGenerator) {
+  generateProjectLibraryBazelModule(
+    file = projectDir.resolve("build/lib/MODULE.bazel"),
+    isCommunity = false,
+    jarRepositories = jarRepositories,
+    m2Repo = m2Repo,
+    generator = generator,
+  )
+}
 
-private data class Library(
-  @JvmField val bazelLabel: String,
-  @JvmField val mavenCoordinates: String,
-  @JvmField val targetName: String,
-  @JvmField val isProvided: Boolean,
-  @JvmField val isCommunity: Boolean,
-)
+@Suppress("DuplicatedCode")
+private fun generateProjectLibraryBazelModule(file: Path, isCommunity: Boolean, jarRepositories: List<JarRepository>, m2Repo: Path, generator: BazelBuildFileGenerator) {
+  val bazelFileUpdater = BazelFileUpdater(file)
+  bazelFileUpdater.removeSections("maven-libraries")
+  val labelTracker = hashSetOf<String>()
+  buildFile(bazelFileUpdater, "maven-libs") {
+    generator.libs.asSequence()
+      .filterIsInstance<MavenLibrary>()
+      .filter { it.isCommunity == isCommunity }
+      .sortedBy { it.targetName }
+      .flatMap { lib ->
+        lib.jars.asSequence().map { jar ->
+          val label = "${escapeBazelLabel(jar.nameWithoutExtension)}_http"
+          if (labelTracker.contains(label)) {
+            return@map
+          }
 
-private class BazelBuildFileGenerator(
-  private val projectDir: Path,
-  project: JpsProject,
-  private val productionOnly: Boolean = true,
-) {
-  private val javaExtensionService = JpsJavaExtensionService.getInstance()
-  private val projectJavacSettings = javaExtensionService.getCompilerConfiguration(project)
-
-  private val generated = IdentityHashMap<JpsModule, Boolean>()
-  private val queue = ArrayDeque<JpsModule>()
-
-  private val moduleDescriptors = IdentityHashMap<JpsModule, ModuleDescriptor>()
-
-  private fun getModuleDescriptor(module: JpsModule): ModuleDescriptor? {
-    try {
-      return moduleDescriptors.computeIfAbsent(module) { describeModule(it) }
-    }
-    catch (_: NoContentRoot) {
-      println("Skip ${module.name} because it has no content roots")
-      return null
-    }
-  }
-
-  val libs = LinkedHashSet<Library>()
-
-  fun addModuleToQueue(module: JpsModule) {
-    if (generated.putIfAbsent(module, true) == null) {
-      queue.addLast(module)
-    }
-  }
-
-  fun generate() {
-    while (true) {
-      generateBazelBuildFiles(module = queue.removeFirstOrNull() ?: break)
-    }
-  }
-
-  private fun getBazelDependencyLabel(module: JpsModule): String? {
-    val descriptor = getModuleDescriptor(module) ?: return null
-    val contentRoot = descriptor.contentRoot
-    var path = checkAndGetRelativePath(projectDir, contentRoot).invariantSeparatorsPathString
-    if (path.startsWith("community/")) {
-      path = "@community//${path.removePrefix("community/")}"
-    }
-    else {
-      path = "//$path"
-    }
-    val dirName = contentRoot.fileName.toString()
-    val bazelName = jpsModuleNameToBazelBuildName(module)
-    return path + (if (dirName == bazelName) "" else ":${jpsModuleNameToBazelBuildName(module)}")
-  }
-
-  private fun generateBazelBuildFiles(module: JpsModule) {
-    val moduleDescriptor = getModuleDescriptor(module) ?: return
-    val contentRoot = moduleDescriptor.contentRoot
-    val fileUpdater = BazelFileUpdater(contentRoot.resolve("BUILD.bazel"))
-    buildFile(fileUpdater, "build") {
-      val sources = computeSources(module, contentRoot, JavaSourceRootType.SOURCE)
-      val resources = module.sourceRoots.filter { it.rootType == JavaResourceRootType.RESOURCE }
-
-      val resourceDependencies = mutableListOf<String>()
-
-      val isResourceOnly = sources.isEmpty()
-      if (resources.isNotEmpty()) {
-        generateResources(resources = resources, isResourceOnly = isResourceOnly, module = module, resourceDependencies = resourceDependencies, contentRoot = contentRoot)
-      }
-
-      if (!isResourceOnly) {
-        load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
-
-        target("kt_jvm_library") {
-          option("name", jpsModuleNameToBazelBuildName(module))
-          option("module_name", module.name)
-          visibility(arrayOf("//visibility:public"))
-          option("srcs", glob(sources))
-
-          val jvmTarget = getLanguageLevel(module)
-          var kotlincOptionsLabel = computeKotlincOptions(module = module, jvmTarget = jvmTarget) ?: "//:k$jvmTarget"
-          var javacOptionsLabel = computeJavacOptions(module, jvmTarget) ?: "//:j$jvmTarget"
-
-          option("javac_opts", javacOptionsLabel)
-          option("kotlinc_opts", kotlincOptionsLabel)
-
-          generateDeps(module, resourceDependencies)
-        }
-      }
-
-      if (resources.isEmpty() && sources.isEmpty()) {
-        //todo support generation for test-only modules
-        return
-      }
-    }
-    fileUpdater.save()
-  }
-
-  private fun BuildFile.generateResources(
-    resources: List<JpsModuleSourceRoot>,
-    isResourceOnly: Boolean,
-    module: JpsModule,
-    resourceDependencies: MutableList<String>,
-    contentRoot: Path,
-  ) {
-    load("@rules_java//java:defs.bzl", "java_library")
-    for (resourceRoot in resources) {
-      target("java_library") {
-        val resourceDependency = if (isResourceOnly) jpsModuleNameToBazelBuildName(module) else resourceRoot.path.fileName.toString()
-        option("name", resourceDependency)
-        if (isResourceOnly) {
-          visibility(arrayOf("//visibility:public"))
-        }
-        else {
-          resourceDependencies.add(resourceDependency)
-        }
-
-        val prefix = checkAndGetRelativePath(contentRoot, resourceRoot.path).invariantSeparatorsPathString
-        option("resources", glob(listOf("$prefix/**/*")))
-      }
-    }
-  }
-
-  private fun jpsModuleNameToBazelBuildName(module: JpsModule): @NlsSafe String {
-    return module.name
-      .removePrefix("intellij.platform.")
-      .removePrefix("intellij.idea.community.")
-      .removePrefix("intellij.")
-      .replace('.', '-')
-  }
-
-  private fun BuildFile.computeJavacOptions(module: JpsModule, jvmTarget: String): String? {
-    val extraJavacOptions = projectJavacSettings.currentCompilerOptions.ADDITIONAL_OPTIONS_OVERRIDE.get(module.name) ?: return null
-    val exports = mutableListOf<String>()
-    val regex = Regex("""--add-exports\s+([^=]+)=\S+""")
-    val matches = regex.findAll(extraJavacOptions)
-    for (match in matches) {
-      exports.add(match.groupValues[1] + "=ALL-UNNAMED")
-    }
-
-    if (exports.isEmpty()) {
-      return null
-    }
-
-    load("@rules_kotlin//kotlin:jvm.bzl", "kt_javac_options")
-    val customJavacOptionsName = "custom-javac-options"
-    target("kt_javac_options") {
-      option("name", customJavacOptionsName)
-      // release is not compatible with --add-exports (*** java)
-      require(jvmTarget == "17")
-      option("x_ep_disable_all_checks", true)
-      option("warn", "off")
-      option("add_exports", exports)
-    }
-    return ":$customJavacOptionsName"
-  }
-
-  private fun BuildFile.computeKotlincOptions(module: JpsModule, jvmTarget: String): String? {
-    val kotlinFacetModuleExtension = module.container.getChild(JpsKotlinFacetModuleExtension.KIND) ?: return null
-    val optIn = kotlinFacetModuleExtension.settings.mergedCompilerArguments?.optIn ?: return null
-    // see create_kotlinc_options
-    val effectiveOptIn = optIn.toMutableList()
-    effectiveOptIn.remove("com.intellij.openapi.util.IntellijInternalApi")
-    if (effectiveOptIn.isEmpty()) {
-      return null
-    }
-
-    load("@community//:build/compiler-options.bzl", "create_kotlinc_options")
-
-    val kotlincOptionsName = "custom"
-    target("create_kotlinc_options") {
-      option("name", kotlincOptionsName)
-      option("jvm_target", if (jvmTarget == "8") "1.8" else jvmTarget)
-      @Suppress("SpellCheckingInspection")
-      option("x_optin", effectiveOptIn)
-    }
-    return ":$kotlincOptionsName"
-  }
-
-  private fun computeSources(module: JpsModule, contentRoot: Path, type: JpsModuleSourceRootType<*>): List<String> {
-    return module.sourceRoots.asSequence()
-      .filter { it.rootType == type }
-      .flatMap { it ->
-        val dir = it.path
-        var prefix = checkAndGetRelativePath(contentRoot, dir).invariantSeparatorsPathString
-        if (prefix.isNotEmpty()) {
-          prefix += "/"
-        }
-        if (type == JavaSourceRootType.SOURCE || type == JavaSourceRootType.TEST_SOURCE) {
-          sequenceOf("$prefix**/*.kt", "$prefix**/*.java")
-        }
-        else {
-          sequenceOf("$prefix**/*")
+          val entry = getUrlAndSha256(jar = jar, jarRepositories = jarRepositories, m2Repo = m2Repo, urlCache = generator.urlCache)
+          labelTracker.add(label)
+          target("http_file") {
+            option("name", label)
+            option("url", entry.url)
+            option("sha256", entry.sha256)
+            option("downloaded_file_path", jar.fileName.name)
+          }
+        } +
+        lib.sourceJars.asSequence().map { jar ->
+          val label = "${escapeBazelLabel(jar.nameWithoutExtension)}_http"
+          if (labelTracker.contains(label)) {
+            return@map
+          }
+          val entry = getUrlAndSha256(jar = jar, jarRepositories = jarRepositories, m2Repo = m2Repo, urlCache = generator.urlCache)
+          labelTracker.add(label)
+          target("http_file") {
+            option("name", label)
+            option("url", entry.url)
+            option("sha256", entry.sha256)
+            option("downloaded_file_path", jar.fileName.name)
+          }
         }
       }
       .toList()
   }
-
-  private fun getLanguageLevel(module: JpsModule): String {
-    val languageLevel = javaExtensionService.getLanguageLevel(module)
-    return when {
-      languageLevel == LanguageLevel.JDK_1_7 || languageLevel == LanguageLevel.JDK_1_8 -> "8"
-      languageLevel == LanguageLevel.JDK_11 -> "11"
-      languageLevel == LanguageLevel.JDK_17 -> "17"
-      languageLevel != null -> error("Unsupported language level: $languageLevel")
-      else -> "17"
-    }
-  }
-
-  private fun Target.generateDeps(module: JpsModule, resourceDependencies: List<String>) {
-    val deps = ArrayList<String>()
-    val exports = mutableListOf<String>()
-    val runtimeDeps = mutableListOf<String>()
-
-    resourceDependencies.mapTo(runtimeDeps) { ":$it" }
-
-    for (element in module.dependenciesList.dependencies) {
-      val dependencyExtension = javaExtensionService.getDependencyExtension(element) ?: continue
-      val scope = dependencyExtension.scope
-      if (productionOnly && !isProductionRuntime(withTests = false, scope = scope)) {
-        continue
-      }
-
-      if (element is JpsModuleDependency) {
-        val dependency = element.moduleReference.resolve()!!
-        // todo runtime dependency (getBazelDependencyLabel() is null only because fake "main" modules do not have content roots, and we don't know where to create BUILD file)
-        val label = getBazelDependencyLabel(dependency) ?: continue
-        if (scope == JpsJavaDependencyScope.RUNTIME) {
-          runtimeDeps.add(label)
-        }
-        else {
-          deps.add(label)
-        }
-        addModuleToQueue(dependency)
-        if (dependencyExtension.isExported) {
-          exports.add(label)
-        }
-      }
-      else if (element is JpsLibraryDependency) {
-        val untypedLib = element.library!!
-        val library = untypedLib.asTyped(JpsRepositoryLibraryType.INSTANCE)
-        if (library == null) {
-          val targetName = untypedLib.name.lowercase()
-          deps.add("@community//lib:$targetName")
-          continue
-        }
-
-        val data = library.properties.data
-        val bazelLabel = "@maven//:" + "${data.groupId}_${data.artifactId}".replace('.', '_').replace('-', '_')
-        var isProvided = false
-        var targetName = data.artifactId
-        if (scope == JpsJavaDependencyScope.PROVIDED) {
-          isProvided = true
-          targetName += ".provided"
-        }
-
-        val libLabel = "@libraries//:$targetName"
-        if (scope == JpsJavaDependencyScope.RUNTIME) {
-          runtimeDeps.add(libLabel)
-        }
-        else {
-          deps.add(libLabel)
-        }
-
-        if (dependencyExtension.isExported) {
-          exports.add(libLabel)
-        }
-
-        libs.add(
-          Library(
-            targetName = targetName,
-            bazelLabel = bazelLabel,
-            mavenCoordinates = "${data.groupId}:${data.artifactId}:${data.version}",
-            isProvided = isProvided,
-            // todo isCommunity
-            isCommunity = true,
-          )
-        )
-
-        if (data.artifactId == "kotlinx-serialization-core-jvm") {
-          option("plugins", arrayOf("@libraries//:serialization_plugin"))
-        }
-      }
-    }
-
-
-    if (deps.isNotEmpty()) {
-      option("deps", deps)
-    }
-    if (exports.isNotEmpty()) {
-      option("exports", exports)
-    }
-    if (runtimeDeps.isNotEmpty()) {
-      option("runtime_deps", runtimeDeps)
-    }
-  }
-
-  private fun isProductionRuntime(withTests: Boolean, scope: JpsJavaDependencyScope): Boolean {
-    if (withTests && scope.isIncludedIn(JpsJavaClasspathKind.TEST_RUNTIME)) {
-      return true
-    }
-    return scope.isIncludedIn(JpsJavaClasspathKind.PRODUCTION_RUNTIME) || scope.isIncludedIn(JpsJavaClasspathKind.PRODUCTION_COMPILE)
-  }
+  bazelFileUpdater.save()
 }
 
-private fun checkAndGetRelativePath(parentDir: Path, childDir: Path): Path {
-  require(childDir.startsWith(parentDir)) {
-    "$childDir must be a child of parentDir $parentDir"
-  }
-  return parentDir.relativize(childDir)
-}
+internal data class ResourceDescriptor(
+  @JvmField val baseDirectory: String,
+  @JvmField val files: List<String>,
+)
+
+internal data class ModuleDescriptor(
+  @JvmField val module: JpsModule,
+  @JvmField val baseDirectory: Path,
+  @JvmField val contentRoots: List<Path>,
+  @JvmField val sources: List<String>,
+  @JvmField val resources: List<ResourceDescriptor>,
+  @JvmField val testSources: List<String>,
+  @JvmField val testResources: List<ResourceDescriptor>,
+  @JvmField val isCommunity: Boolean,
+  @JvmField val bazelBuildFileDir: Path,
+)
