@@ -17,28 +17,21 @@ import com.intellij.openapi.externalSystem.service.execution.ExternalSystemRunCo
 import com.intellij.openapi.externalSystem.util.ExternalSystemTelemetryUtil;
 import com.intellij.openapi.externalSystem.util.OutputWrapper;
 import com.intellij.openapi.progress.ProcessCanceledException;
-import com.intellij.openapi.util.Couple;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.util.*;
 import com.intellij.util.containers.ContainerUtil;
-import com.intellij.util.containers.MultiMap;
+import com.intellij.util.execution.ParametersListUtil;
 import com.intellij.util.lang.JavaVersion;
 import io.opentelemetry.api.trace.Span;
 import io.opentelemetry.api.trace.StatusCode;
 import io.opentelemetry.context.Scope;
-import org.gradle.api.logging.LogLevel;
-import org.gradle.process.internal.JvmOptions;
 import org.gradle.tooling.*;
 import org.gradle.tooling.events.OperationType;
-import org.gradle.tooling.model.BuildIdentifier;
-import org.gradle.tooling.model.UnsupportedMethodException;
 import org.gradle.tooling.model.build.BuildEnvironment;
 import org.gradle.util.GradleVersion;
 import org.jetbrains.annotations.*;
 import org.jetbrains.plugins.gradle.jvmcompat.GradleJvmSupportMatrix;
-import org.jetbrains.plugins.gradle.properties.GradleProperties;
 import org.jetbrains.plugins.gradle.properties.GradlePropertiesFile;
-import org.jetbrains.plugins.gradle.properties.models.Property;
 import org.jetbrains.plugins.gradle.service.execution.cmd.GradleCommandLineOptionsProvider;
 import org.jetbrains.plugins.gradle.service.project.GradleExecutionHelperExtension;
 import org.jetbrains.plugins.gradle.settings.GradleExecutionSettings;
@@ -49,26 +42,42 @@ import org.jetbrains.plugins.gradle.util.cmd.node.GradleCommandLineTask;
 
 import java.io.File;
 import java.io.InputStream;
+import java.nio.file.Path;
 import java.util.*;
 
 import static org.jetbrains.plugins.gradle.GradleConnectorService.withGradleConnection;
 
-public class GradleExecutionHelper {
+public final class GradleExecutionHelper {
+
+  /**
+   * @deprecated Use helper methods without object instantiation.
+   * All method is this class is static.
+   */
+  @Deprecated
+  public GradleExecutionHelper() { }
 
   private static final Logger LOG = Logger.getInstance(GradleExecutionHelper.class);
 
-  public <T> T execute(@NotNull String projectPath,
-                       @Nullable GradleExecutionSettings settings,
-                       @NotNull Function<? super ProjectConnection, ? extends T> f) {
+  /**
+   * @deprecated Use instead the static variant of this method.
+   */
+  @Deprecated
+  public <T> T execute(
+    @NotNull String projectPath,
+    @Nullable GradleExecutionSettings settings,
+    @NotNull Function<? super ProjectConnection, ? extends T> f
+  ) {
     return execute(projectPath, settings, null, null, null, f);
   }
 
-  public <T> T execute(@NotNull String projectPath,
-                       @Nullable GradleExecutionSettings settings,
-                       @Nullable ExternalSystemTaskId taskId,
-                       @Nullable ExternalSystemTaskNotificationListener listener,
-                       @Nullable CancellationToken cancellationToken,
-                       @NotNull Function<? super ProjectConnection, ? extends T> f) {
+  public static <T> T execute(
+    @NotNull String projectPath,
+    @Nullable GradleExecutionSettings settings,
+    @Nullable ExternalSystemTaskId taskId,
+    @Nullable ExternalSystemTaskNotificationListener listener,
+    @Nullable CancellationToken cancellationToken,
+    @NotNull Function<? super ProjectConnection, ? extends T> f
+  ) {
     String projectDir;
     File projectPathFile = new File(projectPath);
     if (projectPathFile.isFile() && projectPath.endsWith(GradleConstants.EXTENSION) && projectPathFile.getParent() != null) {
@@ -84,50 +93,45 @@ public class GradleExecutionHelper {
     else {
       projectDir = projectPath;
     }
-    return withGradleConnection(
-      projectDir, taskId, settings, listener, cancellationToken,
-      connection -> {
-        try {
-          return SystemPropertiesAdjuster.executeAdjusted(projectDir, () -> f.fun(connection));
-        }
-        catch (ExternalSystemException | ProcessCanceledException e) {
-          throw e;
-        }
-        catch (Throwable e) {
-          LOG.warn("Gradle execution error", e);
-          Throwable rootCause = ExceptionUtil.getRootCause(e);
-          ExternalSystemException externalSystemException = new ExternalSystemException(ExceptionUtil.getMessage(rootCause), e);
-          externalSystemException.initCause(e);
-          throw externalSystemException;
-        }
-      });
+    return withGradleConnection(projectDir, taskId, settings, listener, cancellationToken, connection -> {
+      try {
+        return SystemPropertiesAdjuster.executeAdjusted(projectDir, () -> f.fun(connection));
+      }
+      catch (ExternalSystemException | ProcessCanceledException e) {
+        throw e;
+      }
+      catch (Throwable e) {
+        LOG.warn("Gradle execution error", e);
+        Throwable rootCause = ExceptionUtil.getRootCause(e);
+        ExternalSystemException externalSystemException = new ExternalSystemException(ExceptionUtil.getMessage(rootCause), e);
+        externalSystemException.initCause(e);
+        throw externalSystemException;
+      }
+    });
   }
 
   @ApiStatus.Internal
   public static void prepareForExecution(
-    @NotNull ProjectConnection connection,
     @NotNull LongRunningOperation operation,
     @NotNull CancellationToken cancellationToken,
     @NotNull ExternalSystemTaskId id,
-    @NotNull List<String> tasksAndArguments,
     @NotNull GradleExecutionSettings settings,
-    @NotNull ExternalSystemTaskNotificationListener listener
+    @NotNull ExternalSystemTaskNotificationListener listener,
+    @Nullable BuildEnvironment buildEnvironment
   ) {
     clearSystemProperties(operation);
 
     applyIdeaParameters(settings);
 
-    BuildEnvironment buildEnvironment = getBuildEnvironment(connection, id, listener, null, settings);
-
     setupJvmArguments(operation, settings, buildEnvironment);
 
     setupLogging(settings, buildEnvironment);
 
-    setupArguments(operation, tasksAndArguments, settings);
+    setupArguments(operation, settings);
 
     setupEnvironment(operation, settings);
 
-    setupJavaHome(operation, settings);
+    setupJavaHome(operation, settings, id);
 
     setupProgressListeners(operation, settings, id, listener, buildEnvironment);
 
@@ -161,8 +165,8 @@ public class GradleExecutionHelper {
     @NotNull ExternalSystemTaskNotificationListener listener,
     @Nullable BuildEnvironment buildEnvironment
   ) {
-    String buildRootDir = getBuildRoot(buildEnvironment);
-    GradleProgressListener progressListener = new GradleProgressListener(listener, id, buildRootDir);
+    var buildRootDir = getBuildRoot(buildEnvironment);
+    var progressListener = new GradleProgressListener(listener, id, buildRootDir);
     operation.addProgressListener((ProgressListener)progressListener);
     operation.addProgressListener(
       progressListener,
@@ -193,40 +197,36 @@ public class GradleExecutionHelper {
     }
   }
 
-  private static void setupJvmArguments(
+  @VisibleForTesting
+  public static void setupJvmArguments(
     @NotNull LongRunningOperation operation,
     @NotNull GradleExecutionSettings settings,
     @Nullable BuildEnvironment buildEnvironment
   ) {
-    List<String> jvmArgs = settings.getJvmArguments();
-    if (!jvmArgs.isEmpty()) {
-      // merge gradle args e.g. defined in gradle.properties
-      Collection<String> merged;
-      if (buildEnvironment != null) {
-        // the BuildEnvironment jvm arguments of the main build should be used for the 'buildSrc' import
-        // to avoid spawning of the second gradle daemon
-        BuildIdentifier buildIdentifier = getBuildIdentifier(buildEnvironment);
-        List<String> buildJvmArguments = buildIdentifier == null || "buildSrc".equals(buildIdentifier.getRootDir().getName())
-                                         ? ContainerUtil.emptyList()
-                                         : buildEnvironment.getJava().getJvmArguments();
-        merged = mergeBuildJvmArguments(buildJvmArguments, jvmArgs);
+    var buildRoot = getBuildRoot(buildEnvironment);
+    if (buildRoot != null) {
+      var properties = GradlePropertiesFile.getProperties(settings.getServiceDirectory(), buildRoot);
+      var jvmArgsProperty = properties.getJvmOptions();
+      if (jvmArgsProperty != null) {
+        var jvmArgs = ParametersListUtil.parse(jvmArgsProperty.getValue());
+        LOG.debug("Passing JVM args from gradle.properties to Gradle Tooling API: " + jvmArgs);
+        operation.addJvmArguments(jvmArgs);
       }
-      else {
-        merged = jvmArgs;
-      }
-
-      // filter nulls and empty strings
-      List<String> filteredArgs = ContainerUtil.mapNotNull(merged, s -> StringUtil.isEmpty(s) ? null : s);
-
-      operation.setJvmArguments(ArrayUtilRt.toStringArray(filteredArgs));
     }
+
+    var jvmArgs = ContainerUtil.filter(settings.getJvmArguments(), it -> !StringUtil.isEmpty(it));
+    LOG.debug("Passing custom JVM args to Gradle Tooling API: " + jvmArgs);
+    operation.addJvmArguments(jvmArgs);
   }
 
   private static void setupJavaHome(
     @NotNull LongRunningOperation operation,
-    @NotNull GradleExecutionSettings settings
+    @NotNull GradleExecutionSettings settings,
+    @NotNull ExternalSystemTaskId id
   ) {
-    final String javaHome = settings.getJavaHome();
+    var javaHome = GradleDaemonJvmHelper.isExecutingUpdateDaemonJvmTask(settings)
+                   ? GradleDaemonJvmHelper.getGradleJvmForUpdateDaemonJvmTask(id)
+                   : settings.getJavaHome();
     if (javaHome != null && new File(javaHome).isDirectory()) {
       LOG.debug("Java home to set for Gradle operation: " + javaHome);
       operation.setJavaHome(new File(javaHome));
@@ -235,14 +235,9 @@ public class GradleExecutionHelper {
 
   private static void setupArguments(
     @NotNull LongRunningOperation operation,
-    @NotNull List<String> tasksAndArguments,
     @NotNull GradleExecutionSettings settings
   ) {
-    var commandLine = GradleCommandLineUtil.parseCommandLine(
-      tasksAndArguments,
-      settings.getArguments()
-    );
-    commandLine = fixUpGradleCommandLine(commandLine);
+    var commandLine = fixUpGradleCommandLine(settings.getCommandLine());
 
     LOG.info("Passing command-line to Gradle Tooling API: " +
              StringUtil.join(obfuscatePasswordParameters(commandLine.getTokens()), " "));
@@ -315,21 +310,18 @@ public class GradleExecutionHelper {
     var options = GradleCommandLineOptionsProvider.LOGGING_OPTIONS.getOptions();
     var optionsNames = GradleCommandLineOptionsProvider.getAllOptionsNames(options);
 
+    if (ContainerUtil.exists(optionsNames, it -> arguments.contains(it))) {
+      return;
+    }
+
     // workaround for https://github.com/gradle/gradle/issues/19340
     // when using TAPI, user-defined log level option in gradle.properties is ignored by Gradle.
     // try to read this file manually and apply log level explicitly
-    if (buildEnvironment == null || !isRootDirAvailable(buildEnvironment)) {
-      return;
-    }
-    GradleProperties properties = GradlePropertiesFile.INSTANCE.getProperties(settings.getServiceDirectory(),
-                                                                              buildEnvironment.getBuildIdentifier().getRootDir().toPath());
-    Property<String> loggingLevelProperty = properties.getGradleLoggingLevel();
-    @NonNls String gradleLogLevel = loggingLevelProperty != null ? loggingLevelProperty.getValue() : null;
-
-    if (!ContainerUtil.exists(optionsNames, it -> arguments.contains(it))
-        && gradleLogLevel != null) {
-      try {
-        LogLevel logLevel = LogLevel.valueOf(gradleLogLevel.toUpperCase());
+    var buildRoot = getBuildRoot(buildEnvironment);
+    if (buildRoot != null) {
+      var properties = GradlePropertiesFile.getProperties(settings.getServiceDirectory(), buildRoot);
+      var logLevel = properties.getGradleLogLevel();
+      if (logLevel != null) {
         switch (logLevel) {
           case DEBUG -> settings.withArgument("-d");
           case INFO -> settings.withArgument("-i");
@@ -337,46 +329,24 @@ public class GradleExecutionHelper {
           case QUIET -> settings.withArgument("-q");
         }
       }
-      catch (IllegalArgumentException e) {
-        LOG.warn("org.gradle.logging.level must be one of quiet, warn, lifecycle, info, or debug");
-      }
+    }
+
+    if (ContainerUtil.exists(optionsNames, it -> arguments.contains(it))) {
+      return;
     }
 
     // Default logging level for integration tests
     final Application application = ApplicationManager.getApplication();
     if (application != null && application.isUnitTestMode()) {
-      if (!ContainerUtil.exists(optionsNames, it -> arguments.contains(it))) {
-        settings.withArgument("--info");
-      }
+      settings.withArgument("--info");
     }
   }
 
-  private static boolean isRootDirAvailable(@NotNull BuildEnvironment environment) {
-    try {
-      environment.getBuildIdentifier().getRootDir();
-    }
-    catch (UnsupportedMethodException e) {
-      return false;
-    }
-    return true;
-  }
-
-  @Nullable
-  private static BuildIdentifier getBuildIdentifier(@NotNull BuildEnvironment buildEnvironment) {
-    try {
-      return buildEnvironment.getBuildIdentifier();
-    }
-    catch (UnsupportedMethodException ignore) {
-    }
-    return null;
-  }
-
-  public static @Nullable String getBuildRoot(@Nullable BuildEnvironment buildEnvironment) {
+  private static @Nullable Path getBuildRoot(@Nullable BuildEnvironment buildEnvironment) {
     if (buildEnvironment == null) {
       return null;
     }
-    BuildIdentifier buildIdentifier = getBuildIdentifier(buildEnvironment);
-    return buildIdentifier == null ? null : buildIdentifier.getRootDir().getPath();
+    return buildEnvironment.getBuildIdentifier().getRootDir().toPath();
   }
 
   private static void setupEnvironment(
@@ -401,87 +371,6 @@ public class GradleExecutionHelper {
     operation.setEnvironmentVariables(effectiveEnvironment);
   }
 
-  @ApiStatus.Internal
-  @VisibleForTesting
-  static List<String> mergeBuildJvmArguments(@NotNull List<String> jvmArgs, @NotNull List<String> jvmArgsFromIdeSettings) {
-    List<String> mergedJvmArgs = mergeJvmArgs(jvmArgs, jvmArgsFromIdeSettings);
-    JvmOptions jvmOptions = new JvmOptions(null);
-    jvmOptions.setAllJvmArgs(mergedJvmArgs);
-    return jvmOptions.getAllJvmArgs();
-  }
-
-  @ApiStatus.Internal
-  @VisibleForTesting
-  static List<String> mergeJvmArgs(@NotNull List<String> jvmArgs, @NotNull List<String> jvmArgsFromIdeSettings) {
-    List<String> mergedJvmArgs = ContainerUtil.concat(jvmArgs, jvmArgsFromIdeSettings);
-    MultiMap<String, String> argumentsMap = parseJvmArgs(mergedJvmArgs);
-
-    Map<String, String> mergedKeys = new LinkedHashMap<>();
-    Set<String> argKeySet = new LinkedHashSet<>(argumentsMap.keySet());
-    for (String argKey : argKeySet) {
-      Collection<String> values = argumentsMap.getModifiable(argKey);
-      if (values.size() == 1 && values.iterator().next().isEmpty()) {
-        Couple<String> couple = splitArg(argKey);
-        mergedKeys.put(couple.first, couple.second);
-      }
-      else {
-        mergedKeys.put(argKey, "");
-        Map<String, String> mergedArgs = new LinkedHashMap<>();
-        for (String jvmArg : values) {
-          if (jvmArg.isEmpty()) continue;
-          Couple<String> couple = splitArg(jvmArg);
-          mergedArgs.put(couple.first, couple.second);
-        }
-        values.clear();
-        mergedArgs.forEach((key, value) -> values.add(key + value));
-      }
-    }
-
-    List<String> mergedArgs = new SmartList<>();
-    mergedKeys.forEach((s1, s2) -> mergedArgs.add(s1 + s2));
-    argKeySet.stream().filter(argKey -> !mergedArgs.contains(argKey)).forEach(argumentsMap::remove);
-
-    // remove `--add-opens` options, because same options will be added by gradle producing the option duplicates.
-    // And the daemon will become uncompilable with the CLI invocations.
-    // see https://github.com/gradle/gradle/blob/v5.1.1/subprojects/launcher/src/main/java/org/gradle/launcher/daemon/configuration/DaemonParameters.java#L125
-    argumentsMap.remove("--add-opens");
-
-    List<String> result = new SmartList<>();
-    argumentsMap.keySet().forEach(key -> argumentsMap.get(key).forEach(val -> {
-      result.add(key);
-      if (StringUtil.isNotEmpty(val)) {
-        result.add(val);
-      }
-    }));
-    return result;
-  }
-
-  private static @NotNull MultiMap<@NotNull String, @NotNull String> parseJvmArgs(@NotNull List<@NotNull String> args) {
-    MultiMap<String, String> result = MultiMap.createLinkedSet();
-    String lastKey = null;
-    for (String jvmArg : args) {
-      if (jvmArg.startsWith("-")) {
-        result.putValue(jvmArg, "");
-        lastKey = jvmArg;
-      }
-      else {
-        if (lastKey != null) {
-          result.putValue(lastKey, jvmArg);
-          lastKey = null;
-        }
-        else {
-          result.putValue(jvmArg, "");
-        }
-      }
-    }
-    return result;
-  }
-
-  private static Couple<String> splitArg(String arg) {
-    int i = arg.indexOf('=');
-    return i <= 0 ? Couple.of(arg, "") : Couple.of(arg.substring(0, i), arg.substring(i));
-  }
-
   @Nullable
   public static BuildEnvironment getBuildEnvironment(@NotNull ProjectConnection connection,
                                                      @NotNull ExternalSystemTaskId taskId,
@@ -499,10 +388,7 @@ public class GradleExecutionHelper {
           modelBuilder.withCancellationToken(cancellationToken);
         }
         if (settings != null) {
-          final String javaHome = settings.getJavaHome();
-          if (javaHome != null && new File(javaHome).isDirectory()) {
-            modelBuilder.setJavaHome(new File(javaHome));
-          }
+          setupJavaHome(modelBuilder, settings, taskId);
         }
         // do not use connection.getModel methods since it doesn't allow to handle progress events
         // and we can miss gradle tooling client side events like distribution download.
